--- a/.github/workflows/alioth-tester-full.yml
+++ b/.github/workflows/alioth-tester-full.yml
@@ -43,6 +43,17 @@ jobs:
       UPLOAD_TO_RELEASE: false
 
     steps:
+    - name: Install prerequisites
+       run: |
+         sudo apt-get update
+         sudo apt-get install -y curl wget git build-essential zip ccache bc bison flex
+         sudo apt-get install -y libssl-dev libncurses5-dev libncursesw5-dev zlib1g-dev p7zip-full
+         sudo apt-get install -y python3 python3-pip python3-venv ca-certificates
+         sudo apt-get install -y clang lld gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi g++-arm-linux-gnueabi
+         sudo apt-get install -y g++-aarch64-linux-gnu file jq perl tar sudo unzip
+         sudo apt-get install -y pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl 
+         sudo apt-get install -y zip unzip tar gzip bzip2 rar unrar llvm g++-multilib bison gperf zlib1g-dev automake
+         
       - name: Install Dependencies
         run: sudo apt install flex libncurses6
 
